--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "node-telegram-bot-api": "^0.56.0"
   }
 }
